--- a/Symfony/contactos/templates/ficha_contacto.html.twig
+++ b/Symfony/contactos/templates/ficha_contacto.html.twig
@@ -1,16 +1,10 @@
-<!doctype html>
-<html>
-<meta charset="utf-8">
-<body>
+{% extends 'base.html.twig' %}
+{% block title %}Contactos{% endblock %}
+{% block body %}
     <h1>Ficha del contacto</h1>
     {% if contacto %}
-    <ul>
-        <li><strong>{{contacto.nombre}}</strong></li>
-        <li><strong>Teléfono: </strong> {{contacto.telefono}}</li>
-        <li><strong>Correo: </strong> {{contacto.email}}</li>
-    </ul>
+        {{include('partials/datos_contacto.html.twig', {'contacto':contacto})}}
     {% else %}
         <p>Contacto no encontrado</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
