--- a/Symfony/contactos/templates/lista_contactos.html.twig
+++ b/Symfony/contactos/templates/lista_contactos.html.twig
@@ -1,18 +1,12 @@
-<!doctype html>
-<html>
-<meta charset="utf-8">
-<body>
+{% extends 'base.html.twig' %}
+{% block title %}Contactos{% endblock %}
+{% block body %}
     <h1>Listado de contactos</h1>
     {% if contactos %}
-        {%for contacto in contactos %}
-        <ul>
-            <li><strong>{{contacto.nombre}}</strong></li>
-            <li><strong>Teléfono: </strong>{{contacto.telefono}}</li>
-            <li><strong>Correo: </strong>{{contacto.email}}</li>
-        </ul>
+        {% for contacto in contactos %}
+            {{include('partials/datos_contacto.html.twig', {'contacto':contacto})}}
         {% endfor %}
     {% else %}
         <p>No se han encontrado contactos</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
